deploy MD CO v3.0.0 forms and stylesheet to DEV for client testing

--- a/mds_index.html
+++ b/mds_index.html
@@ -158,10 +158,10 @@
                         <h2>Outside the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html#main">Company Template (Last updated: 2021-09-12)</a>
+                        <a href="./mds/company/en/index.html#main">Company Template (Last updated: 2021-11-01)</a>
                         <ul>
                             <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
-                            <li>Sent via the CESG as a separate transaction, outside of the regulatory transaction (application).</li>
+                            <li>Sent via email to Health Canada, outside of the regulatory transaction (application).</li>
                             <li>Refer to the draft REP guidance document for Medical Devices for detailed descriptions of the requirements for the company template.</li>
                         </ul>
                     </div>
@@ -187,7 +187,7 @@
                         <a href="./mds/applicationInfo/en/index.html#main">Application Information Template (Last updated: May 14, 2020)</a>
                         <ul>
                             <li>Sent via the CESG in within a regulatory transaction (application).</li>
-                            <li>Required when filing a new regulatory activity for CTA, CTA-A, Private label or when providing changes to product information in a subsequent transaction for an existing regulatory activity.</li>
+                            <li>Required when filing a new regulatory activity or when providing changes to application information in a subsequent transaction for an existing regulatory activity.</li>
                         </ul>
                     </div>
                 </div>
@@ -196,7 +196,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/internal/company/en/index_internal.html#main">Company Enrolment -Internal (2021-09-12) </a>
+                        <a href="./mds/internal/company/en/index_internal.html#main">Company Enrolment -Internal (2021-11-01) </a>
                     </div>
                     <div class="row">
                         <a href="./mds/internal/dossier/en/index_internal.html">Dossier Enrolment Internal (Feb 15, 2019, V1.0.0)</a>
@@ -207,14 +207,14 @@
                     <div class="row">
                         <h2>Stylesheet Download Links</h2>
                     </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./mds/stylesheet/medicaldevice_stylesheets_1_0.zip">Download v1.0 stylesheet zip file (Aug 16, 2019) </a>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<a href="./mds/stylesheet/medicaldevice_stylesheets_2_0.zip">Download v2.0 stylesheet zip file (May 12, 2020) </a>-->
+                    <!--</div>-->
                     <div class="row">
-                        <a href="./mds/stylesheet/medicaldevice_stylesheets_1_0.zip">Download v1.0 stylesheet zip file (Aug 16, 2019) </a>
-                    </div>
-                    <div class="row">
-                        <a href="./mds/stylesheet/medicaldevice_stylesheets_2_0.zip">Download v2.0 stylesheet zip file (May 12, 2020) </a>
-                    </div>
-                    <div class="row">
-                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0 and v2.0 stylesheet zip files (May 12, 2020) </a>
+                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0, v2.0, and v3.0 stylesheet zip files (2021-11-01) </a>
                     </div>
                 </div>
             </div>
@@ -222,7 +222,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2021-09-12</dt>
+                    <dt>Date modified: 2021-11-01</dt>
                 </dl>
             </div>
         </div>
