--- a/mds/internal/company/en/index_internal.html
+++ b/mds/internal/company/en/index_internal.html
@@ -26,8 +26,8 @@
   <!-- Additional analytics, if required. -->
   <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
   <!-- Load closure template scripts -->
-  <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/soyutils.js"></script>
-  <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/compiled/wet-en.js"></script>
+  <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/soyutils.js"></script>
+  <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
   <!--<script nomodule="" src="generated/ie-polyfills.min.js"></script> -->
   <script src="./assets/js/rep.js"></script>
   <noscript>
@@ -76,7 +76,7 @@
     search: true,
     lngLinks: [{
       lang: "fr",
-      href: "../fr/index.html",
+      href: "../fr/index_internal.html",
       text: "Français"
     }],
     showPreContent: false,
@@ -164,5 +164,5 @@
 <!-- thirdParty:js  -->
 
 <!-- endinject -->
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.ed1fa0ee9090c664f7f1.js" nomodule defer></script><script src="polyfills.c11b48da8375c1718921.js" defer></script><script src="main.11e819b0cd11077abf91.js" defer></script></body>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.ed1fa0ee9090c664f7f1.js" nomodule defer></script><script src="polyfills.c11b48da8375c1718921.js" defer></script><script src="main.88eeaecfea96ae69e2b6.js" defer></script></body>
 </html>
