--- a/mds_index.html
+++ b/mds_index.html
@@ -158,10 +158,13 @@
                         <h2>Outside the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html#main">Company Template (Last updated: 2021-11-28)</a>
+                        <a href="./mds/company/en/index.html#main">Company Template (Last updated: Dec 9, 2021)</a>
                         <ul>
                             <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
-                            <li>Sent via email to Health Canada, outside of the regulatory transaction (application).</li>
+                            <li>Sent via the email. <strong>*New - Effective immediately*</strong></li>
+                            <ul>
+                               <li>Attach draft CO XML file to email prior to sending.</li>
+                            </ul>
                             <li>Refer to the draft REP guidance document for Medical Devices for detailed descriptions of the requirements for the company template.</li>
                         </ul>
                     </div>
@@ -187,7 +190,7 @@
                         <a href="./mds/applicationInfo/en/index.html#main">Application Information Template (Last updated: May 14, 2020)</a>
                         <ul>
                             <li>Sent via the CESG in within a regulatory transaction (application).</li>
-                            <li>Required when filing a new regulatory activity or when providing changes to application information in a subsequent transaction for an existing regulatory activity.</li>
+                            <li>Required for only a subset of transactions. Refer to section “2.4.2 Application information (AI) Template and Process” of the draft REP Guidance Document for Medical Devices detailed description of the requirements for the AI template. </li>
                         </ul>
                     </div>
                 </div>
@@ -214,7 +217,7 @@
                         <!--<a href="./mds/stylesheet/medicaldevice_stylesheets_2_0.zip">Download v2.0 stylesheet zip file (May 12, 2020) </a>-->
                     <!--</div>-->
                     <div class="row">
-                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0, v2.0, and v3.0 stylesheet zip files (2021-11-09) </a>
+                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0, v2.0, and v3.0 stylesheet zip files (Dec 9, 2021) </a>
                     </div>
                 </div>
             </div>
@@ -222,7 +225,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2021-11-09</dt>
+                    <dt>Date modified: 2021-12-02</dt>
                 </dl>
             </div>
         </div>
