update index and version history pages for v4.3

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -150,6 +150,50 @@
                 <p>Si vous avez des questions concernant le contenu de ce document, veuillez communiquer avec <a href="mailto:ereview@hc-sc.gc.ca" lang="en">ereview@hc-sc.gc.ca</a>.</p>
 
             </div>
+
+            <div class="row">
+                <h3>Publication du 1 mars 2022</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de transaction réglementaire (TR) [en vigueur le 1er avril 2022]
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Mise à jour des frais en vertu de l'article 4.1 de l'Arrêté sur les prix à payer à l'égard des drogues et instruments médicaux.</li>
+                                <li>Ajouté la catégorie de la présentation – « étiquetage seulement – avec composante administrative »</li>
+                                <li>Ajouté la catégorie de la présentation – « Examens de protocole » et les descriptions de transaction associées pour le type de dossier les médicaments à usage vétérinaire</li>
+                                <li>Mise à jour et clarification des instructions de divers champs et ajout de descriptions supplémentaires pour les champs</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle d’information sur le produit (IP)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Ajout de la question "Composant administratif" et de la raison de la liste de sélection du composant administratif.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Ensemble de feuilles de style
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Nouvelles feuilles de style  TR et IP version 4.3 pour correspondre aux modifications apportées aux modèles du PIR TR et IP.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
             <div class="row">
                 <h3>Publication du 22 novembre 2021</h3>
             </div>
@@ -241,7 +285,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 22/11/2021</dt>
+                <dt>Date de modification : 01/03/2022</dt>
             </dl>
         </div>
     </div>
