--- a/version_history.html
+++ b/version_history.html
@@ -154,6 +154,49 @@
             </div>
 
             <div class="row">
+                <h3>March 1, 2022 Release</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Template</th>
+                        <th class="col-md-9">Change</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Regulatory Transaction (RT) Template [in effect April 1, 2022]
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Updated fees as per section 4.1 of the Fees in Respect of Drugs and Medical Devices Order.</li>
+                                <li>Added Submission Class – “Labelling only - with administrative component”</li>
+                                <li>Added new Regulatory Activity “Protocol Review” and associated transaction descriptions for dossier type “veterinary”</li>
+                                <li>Updated instructions for various fields and added further descriptions for fields.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Product Information (PI) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Added “Administrative component” question and reason for administrative component picklist.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Stylesheet Package
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>New RT and PI version 4.3 stylesheets to match changes to REP RT and PI templates.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>November 22, 2021 Release</h3>
             </div>
 
@@ -242,7 +285,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2021-11-22</dt>
+            <dt>Date modified: 2022-03-01</dt>
         </dl>
     </div>
 </main>
