--- a/prod_v43_index-fr.html
+++ b/prod_v43_index-fr.html
@@ -148,7 +148,7 @@
                 <h2>Liens de modèle et le de formulaire</h2>
             </div>
             <div class="row">
-                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 22/11/2021)</a>
+                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 01/03/2022)</a>
                 <br>
             </div>
             <div class="row">
@@ -183,28 +183,8 @@
             <div class="row">
                 <h2>Dans le cadre du processus de transaction réglementaire</h2>
             </div>
-            <!--<br>-->
-            <!--<div class="row">-->
-            <!--<a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42/transaction422/réglementaire-transaction.html#main">Modèle de transaction réglementaire (TR) (V4.2.2 mise à jour 29/03/2021)</a>-->
-                <!--<ul>-->
-                    <!--<li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>-->
-                    <!--<li> Envoyé via la PCDC dans le dossier 1.2.1 de la transaction réglementaire (soumission).</li>-->
-                    <!--<li> Reportez-vous à la section «2.5 Processus de dépôt de transactions réglementaires» et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (TR) (V4.2.3 mise à jour 05/03/2021)</a>-->
-                <!--<ul>-->
-                    <!--<li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>-->
-                    <!--<li> Envoyé via la PCDC dans le dossier 1.2.1 de la transaction réglementaire (soumission).</li>-->
-                    <!--<li> Reportez-vous à la section «2.5 Processus de dépôt de transactions réglementaires» et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
             <div class="row">
-                <a href="./prod_v43/transaction/réglementaire-transaction.html">Modèle de transaction réglementaire (TR) pour les médicaments à usage humain et désinfectants ( mise à jour 16/02/2022)</a>
+                <a href="./prod_v42_wcag/transaction/réglementaire-transaction.html">Modèle de transaction réglementaire (TR) pour les médicaments à usage humain et désinfectants ( mise à jour 16/09/2021) [en vigueur jusqu'au 31 mars 2022]</a>
                 <ul>
                     <li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
                     <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (soumission).</li>
@@ -212,7 +192,15 @@
                 </ul>
             </div>
             <div class="row">
-                <a href="./prod_v43/product/produit.html">Modèle d'information sur le produit (IP) (mise à jour 26/01/2022)</a>
+                <a href="./prod_v43/transaction/réglementaire-transaction.html">Modèle de transaction réglementaire (TR) pour les médicaments à usage humain et désinfectants ( mise à jour 01/03/2022) [en vigueur le 1er avril 2022]</a>
+                <ul>
+                    <li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
+                    <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (soumission).</li>
+                    <li> Reportez-vous à la section «2.5 Modèle de transaction réglementaire (TR) et processus» et «3.2 Structure des dossiers» du document d'orientation du PIR, et au didacticiel vidéo du PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>
+                </ul>
+            </div>
+            <div class="row">
+                <a href="./prod_v43/product/produit.html">Modèle d'information sur le produit (IP) (mise à jour 01/03/2022)</a>
                 <ul>
                     <li> Obligatoire uniquement pour un sous-ensemble de transactions. Reportez-vous à la section « 2.5.2 Modèle et processus d'information sur le produit (PI) » du document d'orientation du PIR pour la liste des transactions de sous-ensemble.</li>
                     <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (si fourni).</li>
@@ -239,17 +227,8 @@
             <div class="row">
                 <h2>Liens de téléchargement de feuilles de style </h2>
             </div>
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version, Feb 27, 2020) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Feb 27, 2020) </a>-->
-            <!--</div>-->
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1, V4.2 et V4.3 (mise à jour 16/02/2022) </a>
+                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1, V4.2 et V4.3 (mise à jour 01/03/2022) </a>
             </div>
         </div>
 
@@ -272,7 +251,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 16/02/2022</dt>
+                <dt>Date de modification : 01/03/2022</dt>
             </dl>
         </div>
     </div>
