--- a/prod_v43_index.html
+++ b/prod_v43_index.html
@@ -151,7 +151,7 @@
                 <h2>REP Templates & Form Links</h2>
             </div>
             <div class="row">
-                <a href="./version_history.html">Template version history  (updated 2021-11-22)</a>
+                <a href="./version_history.html">Template version history  (updated 2022-03-01)</a>
                 <br>
             </div>
             <div class="row">
@@ -188,24 +188,8 @@
             <div class="row">
                 <h2>Within the Regulatory Transaction Process</h2>
             </div>
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42/transaction422/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.2 updated on March 29, 2021)</a>-->
-                <!--<ul>-->
-                    <!--<li> Required with each regulatory transaction filed to Health Canada.</li>-->
-                    <!--<li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>-->
-                    <!--<li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.3 updated on March 5, 2021)</a>-->
-                <!--<ul>-->
-                    <!--<li> Required with each regulatory transaction filed to Health Canada.</li>-->
-                    <!--<li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>-->
-                    <!--<li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
             <div class="row">
-                <a href="./prod_v43/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2022-02-16)</a>
+                <a href="./prod_v42_wcag/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2021-09-16) [in effect until March 31, 2022]</a>
                 <ul>
                     <li> Required with each regulatory transaction filed to Health Canada.</li>
                     <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>
@@ -213,7 +197,15 @@
                 </ul>
             </div>
             <div class="row">
-                <a href="./prod_v43/product/product.html">Product Information (PI) Template (updated on 2022-01-26)</a>
+                <a href="./prod_v43/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2022-03-01) [in effect April 1, 2022]</a>
+                <ul>
+                    <li> Required with each regulatory transaction filed to Health Canada.</li>
+                    <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>
+                    <li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
+                </ul>
+            </div>
+            <div class="row">
+                <a href="./prod_v43/product/product.html">Product Information (PI) Template (updated on 2022-03-01)</a>
                 <ul>
                     <li> Required for only a subset of transactions. Refer to section “2.5.2 Product information (PI) Template and Process” of the REP Guidance Document for list of subset transaction.</li>
                     <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (when provided).</li>
@@ -256,17 +248,8 @@
             <div class="row">
                 <h2>Stylesheet Download Link</h2>
             </div>
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version, Jun 02, 2020) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Jun 02, 2020) </a>-->
-            <!--</div>-->
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0, V4.1, V4.2 and V4.3 stylesheet zip file (Updated 2022-02-16) </a>
+                <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0, V4.1, V4.2 and V4.3 stylesheet zip file (Updated 2022-03-01) </a>
             </div>
         </div>
 
@@ -298,7 +281,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-02-16</dt>
+            <dt>Date modified: 2022-03-01</dt>
         </dl>
     </div>
 </main>
