update HV v4.4 index pages

--- a/prod_v44_index.html
+++ b/prod_v44_index.html
@@ -188,14 +188,14 @@
             <div class="row">
                 <h2>Within the Regulatory Transaction Process</h2>
             </div>
-            <div class="row">
+<!--            <div class="row">
                 <a href="./prod_v42_wcag/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2021-09-16) [in effect until March 31, 2022]</a>
                 <ul>
                     <li> Required with each regulatory transaction filed to Health Canada.</li>
                     <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>
                     <li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
                 </ul>
-            </div>
+            </div>-->
             <div class="row">
                 <a href="./prod_v44/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2022-10-01)</a>
                 <ul>
@@ -281,7 +281,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-06-07</dt>
+            <dt>Date modified: 2022-08-31</dt>
         </dl>
     </div>
 </main>
