update v4.4 french index page

--- a/prod_v44_index-fr.html
+++ b/prod_v44_index-fr.html
@@ -158,7 +158,7 @@
                 <a href="./prod_v42_wcag/company/entreprise.html">Modèle de l'entreprise (mise à jour 22/11/2021)</a>
                 <ul>
                     <li> Obligatoire pour obtenir un identifiant d'entreprise et / ou fournir des informations à jour sur l'entreprise à Santé Canada.</li>
-                    <li> Envoyé par courriel. <strong>* Nouveau - En vigueur immédiatement *</strong></li>
+                    <li> Envoyé par courriel. </li>
                     <ul>
                         <li>Joignez l’ébauche de fichier CO XML avant l’envoi.</li>
                     </ul>
