--- a/prod_v44_index.html
+++ b/prod_v44_index.html
@@ -205,7 +205,7 @@
                 </ul>
             </div>
             <div class="row">
-                <a href="./prod_v44/product/product.html">Product Information (PI) Template (updated on 2022-09-11)</a>
+                <a href="./prod_v44/product/product.html">Product Information (PI) Template (updated on 2022-09-16)</a>
                 <ul>
                     <li> Required for only a subset of transactions. Refer to section “2.5.2 Product information (PI) Template and Process” of the REP Guidance Document for list of subset transaction.</li>
                     <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (when provided).</li>
@@ -281,11 +281,11 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-09-11</dt>
+            <dt>Date modified: 2022-09-16</dt>
         </dl>
     </div>
 </main>
-<!--<aside class="gc-nttvs container">-->
+<!--<aside class="gc-nttvs container">--
 <!--<h2>Government of Canada activities and initiatives</h2>-->
 
 <!--<div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"-->
