update template version history pages

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -152,6 +152,54 @@
             </div>
 
             <div class="row">
+                <h3>Publication du 1 octobre 2022</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de transaction réglementaire (TR)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Mise à jour du nom de la Direction des médicaments pharmaceutiques</li>
+                                <li>Suppression des montants des frais</li>
+                                <li>Mise à jour des instructions concernant les frais</li>
+                                <li>Suppression du type d'activité réglementaire « RPP-D (Rapports de mises à jour aux produits en développement) »</li>
+                                <li>Suppression de la description de la transaction de réglementaire « Monographie de produit et encarts d’accompagnement dans la langue seconde » et « Monographie de produit dans la langue seconde »</li>
+                                <li>Ajout d'une nouvelle description de la transaction de réglementaire « Étiquetage des produits – après l’autorisation» </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle d’information sur le produit (IP)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Instructions mises à jour pour le contrat de licence</li>
+                                <li>Suppression de la règle au moins un ingrédient médical actif est nécessaire dans une formulation</li>
+                                <li>Mises à jour des instructions pour les diluants, les placebos et les adjuvants</li>
+                                <li>Ajout de questions sur les données désagrégées</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Ensemble de feuilles de style
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Nouvelles feuilles de style TR et IP version 4.4 pour correspondre aux modifications apportées aux modèles du PIR TR et IP</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>Publication du 1 mars 2022</h3>
             </div>
 
@@ -285,7 +333,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 01/03/2022</dt>
+                <dt>Date de modification : 22/09/2022</dt>
             </dl>
         </div>
     </div>
