--- a/version_history.html
+++ b/version_history.html
@@ -154,6 +154,54 @@
             </div>
 
             <div class="row">
+                <h3>October 1, 2022 Release</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Template</th>
+                        <th class="col-md-9">Change</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Regulatory Transaction (RT) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Updated the Pharmaceutical Drugs Directorate name </li>
+                                <li>Removal of the fee amounts </li>
+                                <li>Updated the instructions regarding the fee</li>
+                                <li>Removal of Regulatory Activity Type “DSUR (Developmental Safety Update Report)”</li>
+                                <li>Removal of Regulatory Transaction Description “Second Language PM & Final Package Insert” and “Second Language Label - Pre-Approval”</li>
+                                <li>Added new Regulatory Transaction Description “Product Labelling-Post approval” </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Product Information (PI) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Updated instructions for Cross-licensed Product</li>
+                                <li>Removal of the rule requiring at least one medical ingredient in a formulation</li>
+                                <li>Updated instructions for dilutes, adjuvants and placebos</li>
+                                <li>Added disaggregated data questions</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Stylesheet Package
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>New RT and PI version 4.4 stylesheets to match changes to REP RT and PI templates.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>March 1, 2022 Release</h3>
             </div>
 
@@ -285,7 +333,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-03-01</dt>
+            <dt>Date modified: 2022-09-22</dt>
         </dl>
     </div>
 </main>
