update template version history pages

--- a/version_history.html
+++ b/version_history.html
@@ -170,7 +170,7 @@
                             <ul>
                                 <li>Updated the Pharmaceutical Drugs Directorate name </li>
                                 <li>Removal of the fee amounts </li>
-                                <li>Updated the instructions regarding the fee</li>
+                                <li>Updated the instructions regarding the fees</li>
                                 <li>Removal of Regulatory Activity Type “DSUR (Developmental Safety Update Report)”</li>
                                 <li>Removal of Regulatory Transaction Description “Second Language PM & Final Package Insert” and “Second Language Label - Pre-Approval”</li>
                                 <li>Added new Regulatory Transaction Description “Product Labelling-Post approval” </li>
