REPPBFORM-566, update template history page

--- a/version_history.html
+++ b/version_history.html
@@ -172,7 +172,7 @@
                                 <li>Removal of the fee amounts </li>
                                 <li>Updated the instructions regarding the fees</li>
                                 <li>Removal of Regulatory Activity Type “DSUR (Developmental Safety Update Report)”</li>
-                                <li>Removal of Regulatory Transaction Description “Second Language PM & Final Package Insert” and “Second Language Label - Pre-Approval”</li>
+                                <li>Removal of Regulatory Transaction Description “Second Language PM & Final Package Insert” and “Second Language Product Monograph”</li>
                                 <li>Added new Regulatory Transaction Description “Product Labelling-Post approval” </li>
                             </ul>
                         </td>
