REPPBFORM-570, update template history page

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -152,6 +152,29 @@
             </div>
 
             <div class="row">
+                <h3>Publication du XX mois 2023</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Template</th>
+                        <th class="col-md-9">Change</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de compagnie (CO)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Ajout d’un texte concernant le numéro de fax</li>
+                                <li>Mise à jour de l’adresse courriel dans l’énoncé de confidentialité</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>Publication du 1 octobre 2022</h3>
             </div>
 
@@ -333,7 +356,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 22/09/2022</dt>
+                <dt>Date de modification : 21/12/2022</dt>
             </dl>
         </div>
     </div>
