--- a/version_history.html
+++ b/version_history.html
@@ -154,6 +154,29 @@
             </div>
 
             <div class="row">
+                <h3>Month Day, Year Release</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Template</th>
+                        <th class="col-md-9">Change</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Company (CO) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Added text regarding fax number </li>
+                                <li>Updated email address in the Privacy Notice Statement </li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>October 1, 2022 Release</h3>
             </div>
 
@@ -333,7 +356,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-10-06</dt>
+            <dt>Date modified: 2022-12-21</dt>
         </dl>
     </div>
 </main>
