REPPBFORM-570, update template history pages

--- a/version_history.html
+++ b/version_history.html
@@ -154,7 +154,7 @@
             </div>
 
             <div class="row">
-                <h3>Month Day, Year Release</h3>
+                <h3>January 4, 2023 Release</h3>
             </div>
 
             <div class="row">
@@ -356,7 +356,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2022-12-21</dt>
+            <dt>Date modified: 2023-01-04</dt>
         </dl>
     </div>
 </main>
