--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -152,14 +152,14 @@
             </div>
 
             <div class="row">
-                <h3>Publication du XX mois 2023</h3>
+                <h3>Publication du 4 janvier 2023</h3>
             </div>
 
             <div class="row">
                 <table class="col-md-12">
                     <tr>
-                        <th class="col-md-3">Template</th>
-                        <th class="col-md-9">Change</th>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
                     </tr>
                     <tr>
                         <td class="col-md-3">Modèle de compagnie (CO)
@@ -356,7 +356,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 21/12/2022</dt>
+                <dt>Date de modification : 04/01/2023</dt>
             </dl>
         </div>
     </div>
