--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <a href="./prod_v42/company/companyINT-en.html">Company Enrolment - Internal (effective May 2021, updated on August 25, 2021) </a>
             </div>
             <div class="row">
-                <a href="./prod_v422/company/companyINT-en.html">Company Enrolment - Internal (effective Nov 22, 2021) </a>
+                <a href="./prod_v422/company/companyINT-en.html">Company Enrolment - Internal (effective Nov 22, 2021 until Jan 4, 2023) </a>
             </div>
             <div class="row">
                 <a href="./prod_v423/company/companyINT-en.html">Company Enrolment - Internal (effective Jan 4, 2023) </a>
