REPPBFORM-583, update template history pages

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -152,6 +152,50 @@
             </div>
 
             <div class="row">
+                <h3>Publication du 28 février 2023</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de transaction réglementaire (TR)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Mise à jour de l’adresse courriel dans l’Énoncé de confidentialité </li>
+                                <li>Mise à jour de l’adresse courriel des médicaments vétérinaires dans les instructions </li>
+                                <li>Augmentation du nombre de caractères autorisés pour le nom du produit </li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle d’information sur le produit (IP)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Mise à jour de l’adresse courriel dans l’Énoncé de confidentialité</li>
+                                <li>Mise à jour de l’adresse courriel des médicaments vétérinaires dans les instructions. </li>
+                                <li>Augmentation du nombre de caractères autorisés pour le nom du produit</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Ensemble de feuilles de style
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Nouvelles feuilles de style TR et IP version 4.4.1 pour correspondre aux modifications apportées aux modèles TR et IP du PIR</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>Publication du 4 janvier 2023</h3>
             </div>
 
@@ -356,7 +400,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 04/01/2023</dt>
+                <dt>Date de modification : 28/02/2023</dt>
             </dl>
         </div>
     </div>
