--- a/version_history.html
+++ b/version_history.html
@@ -154,6 +154,50 @@
             </div>
 
             <div class="row">
+                <h3>February 28, 2023 Release</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Template</th>
+                        <th class="col-md-9">Change</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Regulatory Transaction (RT) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Updated email address in the Privacy Notice Statement</li>
+                                <li>Updated veterinary drugs email address in instructions</li>
+                                <li>Increased character limit allowed for Product Name</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Product Information (PI) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Updated email address in the Privacy Notice Statement</li>
+                                <li>Updated veterinary drugs email address in instructions</li>
+                                <li>Increased character limit allowed for Product Name</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Stylesheet Package
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>New RT and PI version 4.4.1 stylesheets to match changes to REP RT and PI templates</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="row">
                 <h3>January 4, 2023 Release</h3>
             </div>
 
@@ -356,7 +400,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2023-01-04</dt>
+            <dt>Date modified: 2023-02-28</dt>
         </dl>
     </div>
 </main>
