--- a/PROD/repDiff/diffForm-en.html
+++ b/PROD/repDiff/diffForm-en.html
@@ -16,7 +16,7 @@
     <meta property="dcterms.title" content="REP File Compare Utility"/>
     <meta property="dcterms.creator" content="Government of Canada, Health Canada"/>
     <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01"/>
-    <meta property="dcterms.modified" title="W3CDTF" content="2020-09-18"/>
+    <meta property="dcterms.modified" title="W3CDTF" content="2023-02-23"/>
     <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process"/>
     <meta property="dcterms.language" title="ISO639-2/T" content="eng"/>
 
@@ -27,14 +27,14 @@
     <!-- Additional analytics, if required. -->
     <!--/*/ <th:block th:replace="analytics/analytics-header"></th:block> /*/-->
     <!-- Load closure template scripts -->
-    <script src="../wet-boew/js/soyutils.js"></script>
-    <script src="../wet-boew/js/wet-en.js"></script>
+    <script src="../GCWeb/v4.0.41/js/wet-en.js" crossorigin="anonymous"></script>
+    <script src="../GCWeb/v4.0.41/js/soyutils.js" crossorigin="anonymous"></script>
     <noscript>
+    	<link rel="stylesheet" href="../GCWeb/wet-boew/css/noscript.min.css" />
         <!-- Write closure fall-back static file -->
         <!--# include virtual="/rep-dev/cdts/static/refTop.html"-->
     </noscript>
-    <link href="../wet-boew/css/font-awesome.css" rel="stylesheet" crossorigin="anonymous"/>
-    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
+    <link rel="stylesheet" href="../GCWeb/v4.0.41/css/wai-wcag.css" />
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep-diff.css">
     <link rel="stylesheet" href="app/styles/angular-ui-tree.min.css">
@@ -67,7 +67,7 @@
                 maxDateTimes --;
             } else {
                 try {
-                    window.location.href = "#main";
+//                    window.location.href = "#main";
                     $( "input[type=date]" ).trigger( "wb-init.wb-date" );
                 } catch( err ) {
                     console.log(err.message);
@@ -100,29 +100,35 @@
         }
         function focusOnRow(e, alter) {
             var myTable = $(e).closest('table');
+            var myForm = $(e).closest('ng-form');
             window.setTimeout(function(){
                 $('html, body').animate({
                     scrollTop: $(myTable).offset().top + 'px'
                 }, 'fast');
                 var myTr = $(myTable).find('tr').last();
-                if(! $(myTr).attr('id')){
-                    myTr = $(myTr).prev();
-                }
-                var td = $(myTr).find(' > td ').first();
-                if($(td).length < 1){
-                    if(alter != ''){
-                        var parent = $(myTable);
-                        var button = $(parent).find('button[id^=' + alter + ']');
-                        while ($(button).length < 1){
-                            parent = $(parent).parent();
-                            button = $(parent).find('button[id^=' + alter + ']');
-                        }
-                        $(button).focus();
-                    } else {
-                        $(myTable).focus();
-                    }
+                var errSum = $(myForm).find('div[id*="errors-summary"]:visible');
+                if ($(errSum).length > 0) {
+                    $(errSum).find('section').focus();
                 } else {
-                    $(td).focus();
+                    if (!$(myTr).attr('id')) {
+                        myTr = $(myTr).prev();
+                    }
+                    var td = $(myTr).find(' > td ').first();
+                    if ($(td).length < 1) {
+                        if (alter != '') {
+                            var parent = $(myTable);
+                            var button = $(parent).find('button[id^=' + alter + ']');
+                            while ($(button).length < 1) {
+                                parent = $(parent).parent();
+                                button = $(parent).find('button[id^=' + alter + ']');
+                            }
+                            $(button).focus();
+                        } else {
+                            $(myTable).focus();
+                        }
+                    } else {
+                        $(td).focus();
+                    }
                 }
             }, 100);
         }
@@ -163,7 +169,7 @@
     </script>
 </head>
 
-<body vocab="http://schema.org/" typeof="WebPage" style="min-width:543px;" onload="addLeavingChk();">
+<body vocab="http://schema.org/" typeof="WebPage" onload="addLeavingChk();">
 
 <div id="def-top">
     <!-- Write closure fall-back static file -->
@@ -224,20 +230,17 @@
     <!-- end main content -->
 
     <!--content ends here -->
-    <div id="def-preFooter">
-        <!-- Write closure fall-back static file -->
-        <!-- ./wet_4_0_27/cdts/static/preFooter-en.html-->
-        <!--# include virtual="/rep-dev/cdts/static/preFooter-en.html"-->
-    </div>
+	<div id="repPreFooter" class="pagedetails container">
+	  <div class="row">
+	  	<div id="repProblemReport" class="col-sm-6 col-md-5 col-lg-4" data-ajax-replace="../GCWeb/ajax/prefooter-v2-en.html"></div>
+	  	<div id="repSocialShare" class="wb-share col-sm-4 col-md-3 col-sm-offset-2 col-md-offset-4 col-lg-offset-5" data-wb-share='{"lnkClass": "btn btn-default btn-block"}'></div>
+	  </div>
+	  <dl id="wb-dtmd">
+	    <dt>Date modified:&#32;</dt>
+	    <dd><time property="dateModified">2023-02-23</time></dd>
+	  </dl>
+	</div>
 
-    <!-- Write closure template -->
-    <script type="text/javascript">
-        var defPreFooter = document.getElementById("def-preFooter");
-        defPreFooter.outerHTML = wet.builder.preFooter({
-            cdnEnv: "prod",
-            dateModified: "2020-09-18"
-        });
-    </script>
 </main>
 <div id="def-footer">
     <!-- Write closure fall-back static file -->
@@ -275,7 +278,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/translations_20200918_1403.js"></script>
+<script src="app/scripts/translations_20230223_0847.js"></script>
 
 <script src="app/scripts/diffAppEXT-en.js"></script>
 
@@ -285,9 +288,9 @@
 
 <script src="app/scripts/services/diff-service.js"></script>
 
-<script src="app/scripts/components/fileIODiff/FileIO.hpfbFileReader.js"></script>
-
 <script src="app/scripts/components/diff-main/cmp-diff-main.js"></script>
+
+<script src="app/scripts/components/fileIODiff/FileIO.hpfbFileReader.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
